--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,18 @@
 .DS_Store
 .venv
-pymusouf.egg-info/
-build/
+.vscode
 */__pycache__
 */*/__pycache__
-out/
-.vscode
+pymusouf.egg-info/
+build/
+data/
 files/telescopes/SNJ/raypath/*
 files/telescopes/SB/raypath/*
 files/telescopes/BR/raypath/*
 files/telescopes/OM/raypath/*
 files/dem/soufriere_1m*
 files/voxel
+muo2d/old
+out/
+tracking/old
+test.py
