--- a/files/telescopes/BR/run.yaml
+++ b/files/telescopes/BR/run.yaml
@@ -1,7 +1,7 @@
 telescope: BR
 label_calib: Calib10
 label_tomo:  Tomo6_2018_2019
-###ransac directory: 
+###output tracking: 
 reco_calib: data/BR/Calib10/reco/merge
 reco_tomo: 
   run : 
@@ -9,11 +9,6 @@ reco_tomo:
     #- data/BR/3dat/tomo/2016/reco/merge
     - data/BR/3dat/tomo/2017/reco/merge 
     - data/BR/Tomo6/2018_2019/reco/merge
-###output directories
+###output muo2d:
 out_dir_calib: data/BR/Calib10/ana/
 out_dir_tomo: data/BR/3dat/tomo/2017_2018_2019/ana/  #data/BR/3dat/tomo/2017/ana/ #data/BR/3dat/tomo/2017_2018_2019/ana/ #data/BR/Tomo6/2018_2019/ana/ #
-#### efficiency
-#eff_dir: simu/outg4/calib/3p/muons/30122022_1723/ana/efficiency/
-####Charge calibration with calib golden evts:
-#qcal_file: data/BR/Calib10/ana/filter_adc/charge/gold/fit_dQ_Inlier.csv
-
