--- a/files/telescopes/SB/run.yaml
+++ b/files/telescopes/SB/run.yaml
@@ -1,16 +1,13 @@
 telescope: SB
 label_calib: calib
 label_tomo:  tomo
-###ransac directory: 
+
+#output tracking: 
 reco_calib: data/SB/3dat/calib/reco/merge
-reco_tomo: 
+reco_tomo: #as a list of run(s), which are combined if several input
   run: 
     - data/SB/3dat/tomo/reco/merge
-###output directories
+
+#output muo2d:
 out_dir_calib: data/SB/3dat/calib/ana
 out_dir_tomo: data/SB/3dat/tomo/ana
-#### efficiency
-eff_dir: simu/outg4/calib/3p/muons/30122022_1723/ana/efficiency
-####Charge calibration with calib golden evts:
-qcal_file: data/SB/Calib/ana/charge/gold/fit_dQ_Inlier.csv
-
