--- a/files/survey/copahue/telescope/COP/run.yaml
+++ b/files/survey/copahue/telescope/COP/run.yaml
@@ -6,9 +6,9 @@ run :
   calib : 
       calib:
         rawdata :  
-          - ../data/COP/calib/rawdata/
+          - ../data/COP/subset/raw/
         recodata : 
-          - ../data/COP/calib/reco/ 
+          - ../data/COP/subset/reco/ 
 
   tomo : 
       TOMO3_M2 :
